package modelo.jugadores;

public interface JugadorGanador {
    String yoSoy();
}
